# GameEngine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build-shaders.ps1  build.ps1  imgui.ini  settings.json  systems.xlsx  vcpkg-configuration.json  vcpkg.json
dependencies/: CMakeLists.txt
dependencies/imgui-filebrowser/: CMakeLists.txt
src/: Extensions.hpp  GlmExtensions.cpp  GlmExtensions.hpp  Indexation.hpp  implemantations.hpp  implementations.hpp  main.cpp
src/Animations/: Extensions.hpp
src/Animations/Components/: Animation.hpp  AnimationBehavior.hpp  AnimationReference.hpp  AnimationState.hpp  AnimationVertexBufferView.hpp  Bone.hpp  BoneCollection.hpp  BoneInstanceWeightBufferView.hpp  BoneMesh.hpp  BoneReference.hpp  HasSkinInput.hpp  HasVertexWeightInput.hpp  HasVertexWeightRange.hpp  MeshAnimation.hpp  MeshBone.hpp  MeshBoneCollection.hpp  QuatKey.hpp  (+16 more)
src/Applications/: Application.UserInterface.cpp  Application.cpp  Application.hpp  ApplicationState.hpp  Extentions.hpp  Helpers.hpp  Root.UserInterface.cpp  Root.cpp  Root.hpp
src/BoundingVolumes/: Extensions.hpp
src/Buffers/: Extensions.hpp
src/Cameras/: Camera.hpp  CameraSystem.cpp  CameraSystem.hpp  Extensions.hpp
src/Common/: Common.cpp  Common.hpp  ComponentIndex.hpp  IndexGenerator.cpp  IndexGenerator.hpp  KGuillotineAllocator.cpp  KGuillotineAllocator.hpp
src/Configuration/: Configuration.cpp  Configuration.hpp  Extensions.hpp
src/Controllers/: Extensions.hpp  FlyCamController.cpp  FlyCamController.hpp
src/Devices/: Buffer.hpp  BufferStateUploadResult.hpp  BufferUploadResult.hpp  BufferView.hpp  BufferViewState.hpp  Context.hpp  Device.cpp  Device.hpp  DeviceContext.cpp  DeviceContext.hpp  DeviceImageInfo.hpp  Extensions.hpp  Image.hpp  ImageInfo.hpp  QueueFamilyIndices.hpp  SwapChainSupportDetails.hpp  Swapchain.hpp  Texture.cpp  Texture.hpp  VulkanInstanceConfiguration.cpp  VulkanInstanceConfiguration.hpp  VulkanLogicalDeviceInfo.hpp
src/Draws/: Draw.hpp  DrawCommand.hpp  DrawSet.hpp  DrawSystem.hpp  DrawVertexBufferInfo.cpp  DrawVertexBufferInfo.hpp  Extentions.hpp
src/Engine/: DescriptorSetAllocator.cpp  DescriptorSetAllocator.hpp  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.hpp  DescriptorSetLayoutCreateInfoEqualityComparer.cpp  DescriptorSetLayoutCreateInfoEqualityComparer.hpp  DescriptorSetLayouts.cpp  DescriptorSetLayouts.hpp  EngineState.cpp  EngineState.hpp  Extensions.hpp  FrameState.cpp  FrameState.hpp  MeshUploadResult.hpp
src/FreeList/: FreeBlock.hpp  FreeList.hpp
src/Frustums/: Extensions.hpp
src/Geometries/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  Extensions.hpp  Frustum.cpp  Frustum.hpp  Plane.cpp  Plane.hpp  Primitives.hpp
src/Graphics/: DescriptorSetAllocator.cpp  DescriptorSetAllocator.hpp  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.hpp  DescriptorSetLayoutCreateInfoEqualityComparer.cpp  DescriptorSetLayoutCreateInfoEqualityComparer.hpp  Draw.hpp  DrawCommand.hpp  DrawContext.hpp  DrawSet.hpp  EngineState.cpp  EngineState.hpp  Extentions.hpp  FrameState.cpp  FrameState.hpp  GlobalSystem.cpp  GlobalSystem.hpp  Graphics.cpp  Graphics.hpp  MainRenderContext.cpp  MainRenderContext.hpp  MeshPipeline.cpp  MeshPipeline.hpp  MeshUploadResult.hpp  Store.cpp  Store.hpp  StoreBuffer.cpp  StoreBuffer.hpp  StoreBufferAllocator.cpp  StoreBufferAllocator.hpp  StoreItem.hpp  SynchronizationState.cpp  SynchronizationState.hpp
src/ImGui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_nested.cpp  imgui_impl_nested.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_stdlib.cpp  imgui_stdlib.h
src/Lights/: DirectionalLight.hpp  DirectionalLightSystem.cpp  DirectionalLightSystem.hpp  Extensions.hpp  Light.hpp  LightSystem.cpp  LightSystem.hpp  PointLight.hpp  PointLightSystem.cpp  PointLightSystem.hpp  Spotlight.hpp  SpotlightSystem.cpp  SpotlightSystem.hpp
src/Lines/: Extensions.hpp  LinePipeline.cpp  LinePipeline.hpp  LineSystem.cpp  LineSystem.hpp
src/Loaders/: AssimpLoader.cpp  AssimpLoader.hpp  Extensions.hpp  LoadResult.hpp
src/Materials/: Extensions.hpp  Material.hpp  MaterialSystem.cpp  MaterialSystem.hpp
src/Meshes/: Extensions.hpp  Mesh.hpp  MeshGroup.hpp  MeshInfo.hpp  MeshSystem.cpp  MeshSystem.hpp  Vertex.cpp  Vertex.hpp
src/Nodes/: Extensions.hpp
src/Objects/: Dirty.cpp  Dirty.hpp  Extensions.hpp  Object.hpp  ObjectSystem.cpp  ObjectSystem.hpp  Relationship.hpp
src/Physics/: BodyActivationListener.hpp  BroadPhaseLayer.hpp  ContactListener.hpp  ObjectLayerPairFilter.hpp  ObjectVsBroadPhaseLayerFilter.hpp  PhysicsConfiguration.cpp  PhysicsConfiguration.hpp  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.hpp  PhysicsExtensions.cpp  PhysicsExtensions.hpp
src/Pipelines/: ComputePipeline.hpp  GraphicsPipeline.hpp  Pipeline.hpp
src/Points/: Extensions.hpp  PointDrawSystem.cpp  PointDrawSystem.hpp  PointPrimitivePipeline.cpp  PointPrimitivePipeline.hpp  PointSystem.cpp  PointSystem.hpp
src/Registries/: RegistrySystem.hpp
src/Relationships/: Extensions.hpp  RelationshipSystem.cpp  RelationshipSystem.hpp
src/Renderers/: RenderOperation.hpp  Renderer.cpp  Renderer.hpp
src/Resources/: Allocator.hpp  ResourceManager.cpp  ResourceManager.hpp
src/Scenes/: Extensions.hpp  SceneSystem.cpp  SceneSystem.hpp
src/Spatials/: Extensions.hpp  Spatial.hpp  SpatialSystem.cpp  SpatialSystem.hpp
src/Stores/: Extensions.hpp  Store.cpp  Store.hpp  StoreBuffer.cpp  StoreBuffer.hpp  StoreBufferAllocator.cpp  StoreBufferAllocator.hpp  StoreItem.hpp  StoreItemLocation.hpp  TextureStore.cpp  TextureStore.hpp
src/Systems/: IStorageSystem.hpp  StorageSystem.hpp  System.cpp  System.hpp
src/Tasks/: TaskQueue.hpp
src/Textures/: Extensions.hpp  Image.cpp  Image.hpp  ImageInfo.cpp  ImageInfo.hpp  Texture.cpp  Texture.hpp  TextureSystem.cpp  TextureSystem.hpp  TextureType.hpp
src/UserInterfaces/: AssetExplorer.cpp  AssetExplorer.hpp  Extensions.hpp  UserInterface.cpp  UserInterface.hpp
src/Windows/: Extensions.hpp  Window.cpp  Window.hpp  WindowConfiguration.hpp
(+278 files in other folders)
